k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devvault-ingress
  namespace: devvault
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "devvault-ip"
    networking.gke.io/managed-certificates: "devvault-cert"
    networking.gke.io/v1beta1.FrontendConfig: "devvault-frontend-config"
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
